@@ -1,0 +1,159 @@
+
+def value(index):
+  if index==0: return 0x6572276557
+  if index==1: return 0x6f6e
+  if index==2: return 0x676e61727473
+  if index==3: return 0x737265
+  if index==4: return 0x6f74
+  if index==5: return 0x65766f6c
+  if index==6: return 0x756f59
+  if index==7: return 0x776f6e6b
+  if index==8: return 0x656874
+  if index==9: return 0x73656c7572
+  if index==10: return 0x646e61
+  if index==11: return 0x6f73
+  if index==12: return 0x6f64
+  if index==13: return 0x49
+  if index==14: return 0x41
+  if index==15: return 0x6c6c7566
+  if index==16: return 0x74696d6d6f63
+  if index==17: return 0x7327746e656d
+  if index==18: return 0x74616877
+  if index==19: return 0x6d2749
+  if index==20: return 0x6b6e696874
+  if index==21: return 0x676e69
+  if index==22: return 0x666f
+  if index==23: return 0x756f59
+  if index==24: return 0x746e646c756f77
+  if index==25: return 0x746567
+  if index==26: return 0x73696874
+  if index==27: return 0x6d6f7266
+  if index==28: return 0x796e61
+  if index==29: return 0x726568746f
+  if index==30: return 0x797567
+  if index==31: return 0x49
+  if index==32: return 0x7473756a
+  if index==33: return 0x616e6e6177
+  if index==34: return 0x6c6c6574
+  if index==35: return 0x756f79
+  if index==36: return 0x776f68
+  if index==37: return 0x6d2749
+  if index==38: return 0x676e696c656566
+  if index==39: return 0x6174746f47
+  if index==40: return 0x656b616d
+  if index==41: return 0x756f79
+  if index==42: return 0x7265646e75
+  if index==43: return 0x646e617473
+  if index==44: return 0x726576654e
+  if index==45: return 0x616e6e6f67
+  if index==46: return 0x65766967
+  if index==47: return 0x756f79
+  if index==48: return 0x7075
+  if index==49: return 0x726576654e
+  if index==50: return 0x616e6e6f67
+  if index==51: return 0x74656c
+  if index==52: return 0x756f79
+  if index==53: return 0x6e776f64
+  if index==54: return 0x726576654e
+  if index==55: return 0x616e6e6f67
+  if index==56: return 0x6e7572
+  if index==57: return 0x646e756f7261
+  if index==58: return 0x646e61
+  if index==59: return 0x747265736564
+  if index==60: return 0x756f79
+  if index==61: return 0x726576654e
+  if index==62: return 0x616e6e6f67
+  if index==63: return 0x656b616d
+  if index==64: return 0x756f79
+  if index==65: return 0x797263
+  if index==66: return 0x726576654e
+  if index==67: return 0x616e6e6f67
+  if index==68: return 0x796173
+  if index==69: return 0x657962646f6f67
+  if index==70: return 0x726576654e
+  if index==71: return 0x616e6e6f67
+  if index==72: return 0x6c6c6574
+  if index==73: return 0x61
+  if index==74: return 0x65696c
+  if index==75: return 0x646e61
+  if index==76: return 0x74727568
+  if index==77: return 0x756f79
+  if index==78: return 0x6576276557
+  if index==79: return 0x6e776f6e6b
+  if index==80: return 0x68636165
+  if index==81: return 0x726568746f
+  if index==82: return 0x726f66
+  if index==83: return 0x6f73
+  if index==84: return 0x676e6f6c
+  if index==85: return 0x72756f59
+  if index==86: return 0x73277472616568
+  if index==87: return 0x6e656562
+  if index==88: return 0x676e69686361
+  if index==89: return 0x747562
+  if index==90: return 0x657227756f59
+  if index==91: return 0x6f6f74
+  if index==92: return 0x796873
+  if index==93: return 0x6f74
+  if index==94: return 0x796173
+  if index==95: return 0x7469
+  if index==96: return 0x656469736e49
+  if index==97: return 0x6577
+  if index==98: return 0x68746f62
+  if index==99: return 0x776f6e6b
+  if index==100: return 0x732774616877
+  if index==101: return 0x6e656562
+  if index==102: return 0x676e696f67
+  if index==103: return 0x6e6f
+  if index==104: return 0x6557
+  if index==105: return 0x776f6e6b
+  if index==106: return 0x656874
+  if index==107: return 0x656d6167
+  if index==108: return 0x646e61
+  if index==109: return 0x6572276577
+  if index==110: return 0x616e6e6f67
+  if index==111: return 0x79616c70
+  if index==112: return 0x7469
+  if index==113: return 0x646e41
+  if index==114: return 0x6669
+  if index==115: return 0x756f79
+  if index==116: return 0x6b7361
+  if index==117: return 0x656d
+  if index==118: return 0x776f68
+  if index==119: return 0x6d2749
+  if index==120: return 0x676e696c656566
+  if index==121: return 0x74276e6f44
+  if index==122: return 0x6c6c6574
+  if index==123: return 0x656d
+  if index==124: return 0x657227756f79
+  if index==125: return 0x6f6f74
+  if index==126: return 0x646e696c62
+  if index==127: return 0x6f74
+  if index==128: return 0x656573
+  if index==129: return 0x726576654e
+  if index==130: return 0x616e6e6f67
+  if index==131: return 0x65766967
+  if index==132: return 0x756f79
+  if index==133: return 0x7075
+  if index==134: return 0x726576654e
+  if index==135: return 0x616e6e6f67
+  if index==136: return 0x74656c
+  if index==137: return 0x756f79
+  if index==138: return 0x6e776f64
+  if index==139: return 0x726576654e
+  if index==140: return 0x616e6e6f67
+  if index==141: return 0x6e7572
+  if index==142: return 0x646e756f7261
+  if index==143: return 0x646e61
+  if index==144: return 0x747265736564
+  if index==145: return 0x756f79
+  if index==146: return 0x726576654e
+  if index==147: return 0x616e6e6f67
+  if index==148: return 0x656b616d
+  if index==149: return 0x756f79
+  if index==150: return 0x797263
+  if index==151: return 0x726576654e
+  if index==152: return 0x616e6e6f67
+  if index==153: return 0x796173
+  if index==154: return 0x657962646f6f67
+  if index==155: return 0x726576654e
+  if index==156: return 0xa680e2616e6e6f67
