@@ -1,3 +1,6 @@
+11/23/15
+  -Added rolling context
+
 10/15/15
   -Pretty major rewrite of how we build the CIP request, more to come I'm sure
 
